# config-files

./: .gtkrc-2.0  .tmux.conf  .vimrc  .zpreztorc  .zshrc  .zshrc_comp  install.sh  prompt_db_setup
.kde4/share/apps/desktoptheme/Oxygen-Genesis/: CMakeLists.txt  colors  metadata.desktop  pager.svgz  readme.txt  settings
.kde4/share/apps/desktoptheme/Oxygen-Genesis/dialogs/: kickoff.svgz  krunner.svgz  shutdowndialog.svgz
.kde4/share/apps/desktoptheme/Oxygen-Genesis/icons/: Amarok-icon-COPYING.txt  ChangeLog.txt  amarok.svgz  audio.svgz  battery.svgz  configuration-icons.svgz  device.svgz  kget.svgz  klipper.svgz  konv_message.svgz  konversation.svgz  kopete.svgz  korgac.svgz  kpackagekit.svgz  ktorrent.svgz  nepomuk.svgz  network.svgz  notification.svgz  preferences.svgz  printer.svgz  quassel.svgz  readme.txt  wallet.svgz
.kde4/share/apps/desktoptheme/Oxygen-Genesis/lancelot/: action-list-view-headers.svgz  category-triangle.svgz  extender-button-icon.svgz  inner-background.svgz  passageway-view-buttons-extender.svgz  passageway-view-buttons.svgz  passageway-view-inactivebuttons.svgz  passageway-view-spacer.svgz  section-buttons.svgz  system-buttons-extender.svgz  system-buttons.svgz  theme.config
.kde4/share/apps/desktoptheme/Oxygen-Genesis/toolbar-icons/: configure.svgz  edit.svgz  go.svgz  list.svgz  media.svgz  window.svgz
.kde4/share/apps/desktoptheme/Oxygen-Genesis/widgets/: background.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  battery-oxygen.svgz  battery.svgz  busywidget.svgz  button.svgz  checkmarks.svgz  clock.svgz  iconbutton.svgz  (+19 more)
(+261 files in other folders)
